--- a/_config.yml
+++ b/_config.yml
@@ -22,3 +22,7 @@ author:              "Wook Hyun"
 # RSS 2.0 can be used instead of Atom by uncommenting following two lines
 #feed:
 #  path: rss-feed.xml
+
+#deployment
+# host:     127.0.0.1
+port:       3000
