remove redundant texts

--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ author: SUPER WHYUN
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
 language: ko
 date_format: '%Y-%m-%d'
+future: true
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com' and baseurl as '/child'
